bluejay-validator/tests/snapshots/executable_integration_test__error@leaf_field_selections.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/leaf_field_selections.graphql
---
Error: Selection on field of leaf type `Int` was not empty
   ╭─[ leaf_field_selections.graphql:3:16 ]
   │
 3 │ ╭─▶     barkVolume {
   ┆ ┆   
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── Selection set on field of leaf type must be empty
───╯

Error: No selection on field of non-leaf type `Human`
    ╭─[ leaf_field_selections.graphql:10:3 ]
    │
 10 │   human
    │   ──┬──  
    │     ╰──── Fields of non-leaf types must have a selection
────╯

Error: No selection on field of non-leaf type `Pet`
    ╭─[ leaf_field_selections.graphql:14:3 ]
    │
 14 │   pet
    │   ─┬─  
    │    ╰─── Fields of non-leaf types must have a selection
────╯

Error: No selection on field of non-leaf type `CatOrDog`
    ╭─[ leaf_field_selections.graphql:18:3 ]
    │
 18 │   catOrDog
    │   ────┬───  
    │       ╰───── Fields of non-leaf types must have a selection
────╯
